MySQL_Practice_Code_lv1_2_q17 updated

--- a/MySQL_Practice_Code_lv1_2_q11_20.ipynb
+++ b/MySQL_Practice_Code_lv1_2_q11_20.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNdemJsy5G9TCzKBLjUUFpZ"
+      "authorship_tag": "ABX9TyOA5drZjDJ0Ro+BAbByzf+R"
     },
     "kernelspec": {
       "name": "python3",
@@ -26,7 +26,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "eTCCN_P6eW1T"
       },
@@ -78,14 +78,110 @@
       "metadata": {
         "id": "GeokIkNzuzKV"
       },
-      "execution_count": 2,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **17. NULL 처리하기(250201)(IS NULL)**(오답)"
+      ],
+      "metadata": {
+        "id": "pE0ZYt8V3Qjb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1) IFNULL"
+      ],
+      "metadata": {
+        "id": "_mZ_Q4YQ3dgV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# SELECT ANIMAL_TYPE,  -- 동물의 생물 종을 선택\n",
+        "#        IFNULL(NAME, 'No name') AS NAME,  -- NAME이 NULL이면 'No name'으로 표시, 아니면 기존 값 유지\n",
+        "#        SEX_UPON_INTAKE  -- 성별 및 중성화 여부 선택\n",
+        "# FROM ANIMAL_INS  -- ANIMAL_INS 테이블에서 조회\n",
+        "# ORDER BY ANIMAL_ID;  -- ANIMAL_ID 기준으로 오름차순 정렬"
+      ],
+      "metadata": {
+        "id": "T4grZJ1ru2mW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 설명\n",
+        "# 1. SELECT ANIMAL_TYPE\n",
+        "#  - ANIMAL_TYPE 컬럼을 선택하여 동물의 종(예: 개, 고양이 등)을 가져옵니다.\n",
+        "\n",
+        "# 2. IFNULL(NAME, 'No name') AS NAME\n",
+        "#  - NAME 컬럼이 NULL이면 \"No name\"으로 변경하고, 그렇지 않으면 기존 NAME 값을 유지합니다.\n",
+        "#  - IFNULL(column, 대체값)은 MySQL에서 제공하는 함수로, column 값이 NULL이면 대체값을 반환합니다.\n",
+        "#  - 결과적으로, 보호소에 들어올 때 이름이 없는 동물은 \"No name\"으로 표시됩니다."
+      ],
+      "metadata": {
+        "id": "JXb3W8Wv3UyX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2) CASE WHEN"
+      ],
+      "metadata": {
+        "id": "gUeJg71Y3gNp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# SELECT ANIMAL_TYPE,  -- 동물의 생물 종을 선택\n",
+        "#        CASE WHEN NAME IS NULL THEN 'No name' ELSE NAME END AS NAME,  -- NAME이 NULL이면 'No name', 그렇지 않으면 원래 값 유지\n",
+        "#        SEX_UPON_INTAKE  -- 성별 및 중성화 여부 선택\n",
+        "# FROM ANIMAL_INS  -- ANIMAL_INS 테이블에서 조회\n",
+        "# ORDER BY ANIMAL_ID;  -- ANIMAL_ID 기준으로 오름차순 정렬"
+      ],
+      "metadata": {
+        "id": "QXFyCQDC3UvC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 설명\n",
+        "\n",
+        "# 1. SELECT ANIMAL_TYPE\n",
+        "#  - 동물의 생물 종(개, 고양이 등)을 조회합니다.\n",
+        "\n",
+        "# 2. CASE WHEN NAME IS NULL THEN 'No name' ELSE NAME END AS NAME\n",
+        "#  - CASE 문을 사용하여 NAME 값이 NULL인지 확인합니다.\n",
+        "#  - WHEN NAME IS NULL THEN 'No name' → NAME 값이 NULL이면 \"No name\"으로 변경합니다.\n",
+        "#  - ELSE NAME → 그렇지 않으면 기존 NAME 값을 그대로 유지합니다.\n",
+        "#  - END → CASE 문을 종료합니다.\n",
+        "#  - 결과적으로 NULL 값을 \"No name\"으로 변환하여 출력합니다."
+      ],
+      "metadata": {
+        "id": "d5o-w6rC3Uqu"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "T4grZJ1ru2mW"
+        "id": "oSkujNfd3Udl"
       },
       "execution_count": null,
       "outputs": []
