MySQL_Practice_Code_lv1_2_q19 updated

--- a/MySQL_Practice_Code_lv1_2_q11_20.ipynb
+++ b/MySQL_Practice_Code_lv1_2_q11_20.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOsqHnPnyXQi4950oTYL97/"
+      "authorship_tag": "ABX9TyNLaee+UDPf1uP3PCEcNI+O"
     },
     "kernelspec": {
       "name": "python3",
@@ -228,7 +228,7 @@
       "metadata": {
         "id": "oSkujNfd3Udl"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -253,6 +253,29 @@
       ],
       "metadata": {
         "id": "8yZWtrkuCbpA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **19. 경기도에 위치한 식품창고 목록 출력하기(250206)(IS NULL)**"
+      ],
+      "metadata": {
+        "id": "fHNX5pgY95QD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# SELECT WAREHOUSE_ID, WAREHOUSE_NAME, ADDRESS, IFNULL(FREEZER_YN, 'N') AS FREEZER_YN\n",
+        "# FROM FOOD_WAREHOUSE\n",
+        "# WHERE ADDRESS LIKE '경기도%'\n",
+        "# ORDER BY WAREHOUSE_ID;"
+      ],
+      "metadata": {
+        "id": "cAyT4xQh95i3"
       },
       "execution_count": null,
       "outputs": []
