--- a/MySQL_Codingtest_Practice_lv1_2_q21_30_Programmers.ipynb
+++ b/MySQL_Codingtest_Practice_lv1_2_q21_30_Programmers.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPqikK4dkDOR5S5fIZyc+NL"
+      "authorship_tag": "ABX9TyPS1K+Ayorra2c2VL7MIJbf"
     },
     "kernelspec": {
       "name": "python3",
@@ -258,6 +258,82 @@
       ],
       "metadata": {
         "id": "M6l_d3RfA-eX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **24. 카테고리별 상품 개수 구하기(250217)(String, Date)**"
+      ],
+      "metadata": {
+        "id": "esO2X3slwFhd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 문제 설명\n",
+        "# 다음은 어느 의류 쇼핑몰에서 판매중인 상품들의 정보를 담은 PRODUCT 테이블입니다.\n",
+        "# PRODUCT 테이블은 아래와 같은 구조로 되어있으며, PRODUCT_ID, PRODUCT_CODE, PRICE는 각각 상품 ID, 상품코드, 판매가를 나타냅니다.\n",
+        "\n",
+        "# Column name\tType\tNullable\n",
+        "# PRODUCT_ID\tINTEGER\tFALSE\n",
+        "# PRODUCT_CODE\tVARCHAR(8)\tFALSE\n",
+        "# PRICE\tINTEGER\tFALSE\n",
+        "# 상품 별로 중복되지 않는 8자리 상품코드 값을 가지며, 앞 2자리는 카테고리 코드를 의미합니다.\n",
+        "\n",
+        "# 문제\n",
+        "# PRODUCT 테이블에서 상품 카테고리 코드(PRODUCT_CODE 앞 2자리) 별 상품 개수를 출력하는 SQL문을 작성해주세요. 결과는 상품 카테고리 코드를 기준으로 오름차순 정렬해주세요.\n",
+        "\n",
+        "# 예시\n",
+        "# 예를 들어 PRODUCT 테이블이 다음과 같다면\n",
+        "\n",
+        "# PRODUCT_ID\tPRODUCT_CODE\tPRICE\n",
+        "# 1\tA1000011\t10000\n",
+        "# 2\tA1000045\t9000\n",
+        "# 3\tC3000002\t22000\n",
+        "# 4\tC3000006\t15000\n",
+        "# 5\tC3000010\t30000\n",
+        "# 6\tK1000023\t17000\n",
+        "# 상품 카테고리 코드 별 상품은 아래와 같으므로,\n",
+        "\n",
+        "# A1: PRODUCT_ID가 1, 2 인 상품\n",
+        "# C3: PRODUCT_ID가 3, 4, 5 인 상품\n",
+        "# K1: PRODUCT_ID가 6 인 상품\n",
+        "# 다음과 같은 결과가 나와야 합니다.\n",
+        "\n",
+        "# CATEGORY\tPRODUCTS\n",
+        "# A1\t2\n",
+        "# C3\t3\n",
+        "# K1\t1"
+      ],
+      "metadata": {
+        "id": "_wm8tH87wK7E"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1) 내가 쓴 코드"
+      ],
+      "metadata": {
+        "id": "MRKoa6L4xF97"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# SELECT LEFT(PRODUCT_CODE, 2) as CATEGORY, COUNT(*) as PRODUCTS\n",
+        "# FROM PRODUCT\n",
+        "# GROUP BY LEFT(PRODUCT_CODE, 2)\n",
+        "# ORDER BY PRODUCT_CODE"
+      ],
+      "metadata": {
+        "id": "D6wIkYiHxG6_"
       },
       "execution_count": null,
       "outputs": []
