--- a/MySQL_Codingtest_Practice_lv1_2_q21_30_Programmers.ipynb
+++ b/MySQL_Codingtest_Practice_lv1_2_q21_30_Programmers.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPS1K+Ayorra2c2VL7MIJbf"
+      "authorship_tag": "ABX9TyMcaj9wdh93LbQ7//BM2w1S"
     },
     "kernelspec": {
       "name": "python3",
@@ -334,6 +334,89 @@
       ],
       "metadata": {
         "id": "D6wIkYiHxG6_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **25. 진료과별 총 예약 횟수 출력하기(250218)(GROUP BY)**"
+      ],
+      "metadata": {
+        "id": "THJhr9z1adlN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 문제 설명\n",
+        "# 다음은 종합병원의 진료 예약정보를 담은 APPOINTMENT 테이블 입니다.\n",
+        "# APPOINTMENT 테이블은 다음과 같으며 APNT_YMD, APNT_NO, PT_NO, MCDP_CD, MDDR_ID, APNT_CNCL_YN, APNT_CNCL_YMD는\n",
+        "# 각각 진료예약일시, 진료예약번호, 환자번호, 진료과코드, 의사ID, 예약취소여부, 예약취소날짜를 나타냅니다.\n",
+        "\n",
+        "# Column name\tType\tNullable\n",
+        "# APNT_YMD\tTIMESTAMP\tFALSE\n",
+        "# APNT_NO\tNUMBER(5)\tFALSE\n",
+        "# PT_NO\tVARCHAR(10)\tFALSE\n",
+        "# MCDP_CD\tVARCHAR(6)\tFALSE\n",
+        "# MDDR_ID\tVARCHAR(10)\tFALSE\n",
+        "# APNT_CNCL_YN\tVARCHAR(1)\tTRUE\n",
+        "# APNT_CNCL_YMD\tDATE\tTRUE\n",
+        "# 문제\n",
+        "# APPOINTMENT 테이블에서 2022년 5월에 예약한 환자 수를 진료과코드 별로 조회하는 SQL문을 작성해주세요.\n",
+        "# 이때, 컬럼명은 '진료과 코드', '5월예약건수'로 지정해주시고 결과는 진료과별 예약한 환자 수를 기준으로 오름차순 정렬하고,\n",
+        "# 예약한 환자 수가 같다면 진료과 코드를 기준으로 오름차순 정렬해주세요.\n",
+        "\n",
+        "# 예시\n",
+        "# APPOINTMENT 테이블이 다음과 같을 때\n",
+        "\n",
+        "# APNT_YMD\tAPNT_NO\tPT_NO\tMCDP_CD\tMDDR_ID\tAPNT_CNCL_YN\tAPNT_CNCL_YMD\n",
+        "# 2022-04-14 09:30:00.000000\t47\tPT22000064\tGS\tDR20170123\tN\tNULL\n",
+        "# 2022-04-15 10:30:00.000000\t48\tPT22000065\tOB\tDR20100231\tN\tNULL\n",
+        "# 2022-05-15 17:30:00.000000\t49\tPT22000086\tOB\tDR20100231\tN\tNULL\n",
+        "# 2022-05-18 10:30:00.000000\t52\tPT22000019\tGS\tDR20100039\tN\tNULL\n",
+        "# 2022-05-19 12:00:00.000000\t53\tPT22000020\tFM\tDR20010112\tN\tNULL\n",
+        "# 2022-05-22 08:30:00.000000\t54\tPT22000021\tGS\tDR20100039\tN\tNULL\n",
+        "# 2022-05-04 10:30:00.000000\t56\tPT22000023\tFM\tDR20090112\tN\tNULL\n",
+        "# 2022-05-14 15:30:00.000000\t57\tPT22000074\tCS\tDR20200012\tN\tNULL\n",
+        "# 2022-05-24 15:30:00.000000\t58\tPT22000085\tCS\tDR20200012\tN\tNULL\n",
+        "# 2022-05-28 10:00:00.000000\t60\tPT22000092\tOS\tDR20100031\tN\tNULL\n",
+        "# SQL을 실행하면 다음과 같이 출력되어야 합니다.\n",
+        "\n",
+        "# 진료과코드\t5월예약건수\n",
+        "# OB\t1\n",
+        "# OS\t1\n",
+        "# CS\t2\n",
+        "# FM\t2\n",
+        "# GS\t2"
+      ],
+      "metadata": {
+        "id": "d2MfF5whaj7q"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1) 내가 쓴 코드"
+      ],
+      "metadata": {
+        "id": "-G368aqsau7e"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# SELECT MCDP_CD AS '진료과 코드', COUNT(PT_NO) AS '5월예약건수'\n",
+        "# FROM APPOINTMENT\n",
+        "# WHERE APNT_YMD >= '2022-05-01' AND APNT_YMD < '2022-06-01'\n",
+        "# GROUP BY MCDP_CD\n",
+        "# ORDER BY '5월예약건수', '진료과 코드';"
+      ],
+      "metadata": {
+        "id": "x1w4ZyhsawGp"
       },
       "execution_count": null,
       "outputs": []
